# knobs2

./: .gitmodules  LICENSE  README.md  manifest.py  pyproject.toml
freeze/: README.txt  controller.py  pots.py  splash.py  status.py
freeze/myfonts/: poetsen_30.py  poetsen_60.py  poetsen_70.py  poppins_bold_24.py  poppins_bold_30.py  poppins_semi_15.py  poppins_semi_18.py
picofs/: adc.py  app.py  clut_pio.py  color_screen.py  colors.py  compare_adc.py  config.py  controller.py  gui  hardware_setup.py  info.py  main.py  periph.py  pots.py  screens.py  settings.py  status.py  test_adc.py  test_pio.py  test_pio2.py  tester.py  title.py  touch
picofs/drivers/: boolpalette.py
picofs/drivers/ili93xx/: ili9341.py  ili9341_2.py  ili9341_3.py
scripts/: build_uf2.sh  dev.sh  flash_uf2.sh  nuke.py  nuke.sh  py_build.sh  uf2_flash.sh
