[tool.poetry]
name = "knobs2"
version = "0.1.0"
description = "MIDI Knobs"
authors = ["Alan Green <alan.green@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mpremote = "^1.22.0"
ruff = "^0.4.4"
freetype-py = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
